--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -5,191 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sorpresas in Style</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f9;
-    }
-
-    header {
-      background-color: #66e0d4;
-      padding: 1em;
-      text-align: center;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    #company-logo {
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-bottom: 10px;
-    }
-
-    #categorias-container {
-      display: flex;
-      justify-content: center;
-      flex-wrap: nowrap;
-      overflow-x: auto;
-      margin-top: 10px;
-      padding: 5px;
-      width: 100%;
-    }
-
-    .categoria-boton {
-      background-color: #007acc;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      padding: 10px 15px;
-      margin: 5px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-      white-space: nowrap;
-    }
-
-    .categoria-boton:hover {
-      background-color: #005f99;
-    }
-
-    #productos-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-      gap: 12px;
-      padding: 20px;
-      justify-items: center;
-    }
-
-    .producto-tarjeta {
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 12px;
-      width: 150px;
-      text-align: center;
-      background-color: white;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-      position: relative;
-    }
-
-    .producto-imagen {
-      width: 100%;
-      height: 120px;
-      object-fit: cover;
-      border-radius: 6px;
-    }
-
-    .producto-nombre {
-      font-size: 14px;
-      margin: 6px 0;
-      color: #333;
-    }
-
-    .producto-precio {
-      font-size: 13px;
-      color: #666;
-    }
-
-    .producto-categoria {
-      font-size: 12px;
-      color: #999;
-    }
-
-    .producto-boton {
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
-      background-color: #007acc;
-      border: none;
-      border-radius: 50%;
-      color: white;
-      width: 30px;
-      height: 30px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    #carrito {
-      padding: 20px;
-      background-color: #fff;
-      border-top: 1px solid #ddd;
-    }
-
-    #botonAdmin {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      font-size: 24px;
-      background: #007acc;
-      color: white;
-      border: none;
-      padding: 10px;
-      border-radius: 50%;
-      cursor: pointer;
-    }
-
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 10;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0,0,0,0.4);
-      padding-top: 60px;
-    }
-
-    .modal-content {
-      background-color: #fff;
-      margin: auto;
-      padding: 20px;
-      border: 1px solid #888;
-      width: 90%;
-      max-width: 400px;
-      position: relative;
-    }
-
-    .close {
-      color: #aaa;
-      float: right;
-      font-size: 28px;
-      font-weight: bold;
-    }
-
-    .close:hover,
-    .close:focus {
-      color: black;
-      cursor: pointer;
-    }
-
-    .admin-button {
-      display: block;
-      width: 100%;
-      margin: 10px 0;
-      padding: 10px;
-      background-color: #66e0d4;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-      color: white;
-      cursor: pointer;
-    }
-
-    .input-edit {
-      width: 100%;
-      margin: 5px 0;
-    }
-
-    @media screen and (min-width: 600px) {
-      #productos-container {
-        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-      }
-    }
+    /* Existing styles */
   </style>
 
   <!-- Firebase SDKs -->
