--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -6,7 +5,191 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sorpresas in Style</title>
   <style>
-    /* Styles omitted for brevity */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f9;
+    }
+
+    header {
+      background-color: #66e0d4;
+      padding: 1em;
+      text-align: center;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    #company-logo {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 10px;
+    }
+
+    #categorias-container {
+      display: flex;
+      justify-content: center;
+      flex-wrap: nowrap;
+      overflow-x: auto;
+      margin-top: 10px;
+      padding: 5px;
+      width: 100%;
+    }
+
+    .categoria-boton {
+      background-color: #007acc;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      padding: 10px 15px;
+      margin: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+      white-space: nowrap;
+    }
+
+    .categoria-boton:hover {
+      background-color: #005f99;
+    }
+
+    #productos-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+      gap: 12px;
+      padding: 20px;
+      justify-items: center;
+    }
+
+    .producto-tarjeta {
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 12px;
+      width: 150px;
+      text-align: center;
+      background-color: white;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      position: relative;
+    }
+
+    .producto-imagen {
+      width: 100%;
+      height: 120px;
+      object-fit: cover;
+      border-radius: 6px;
+    }
+
+    .producto-nombre {
+      font-size: 14px;
+      margin: 6px 0;
+      color: #333;
+    }
+
+    .producto-precio {
+      font-size: 13px;
+      color: #666;
+    }
+
+    .producto-categoria {
+      font-size: 12px;
+      color: #999;
+    }
+
+    .producto-boton {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      background-color: #007acc;
+      border: none;
+      border-radius: 50%;
+      color: white;
+      width: 30px;
+      height: 30px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    #carrito {
+      padding: 20px;
+      background-color: #fff;
+      border-top: 1px solid #ddd;
+    }
+
+    #botonAdmin {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      font-size: 24px;
+      background: #007acc;
+      color: white;
+      border: none;
+      padding: 10px;
+      border-radius: 50%;
+      cursor: pointer;
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 10;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.4);
+      padding-top: 60px;
+    }
+
+    .modal-content {
+      background-color: #fff;
+      margin: auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 90%;
+      max-width: 400px;
+      position: relative;
+    }
+
+    .close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: black;
+      cursor: pointer;
+    }
+
+    .admin-button {
+      display: block;
+      width: 100%;
+      margin: 10px 0;
+      padding: 10px;
+      background-color: #66e0d4;
+      border: none;
+      border-radius: 5px;
+      font-size: 16px;
+      color: white;
+      cursor: pointer;
+    }
+
+    .input-edit {
+      width: 100%;
+      margin: 5px 0;
+    }
+
+    @media screen and (min-width: 600px) {
+      #productos-container {
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      }
+    }
   </style>
 
   <!-- Firebase SDKs -->
@@ -43,12 +226,117 @@
         actualizarVista();
       });
 
+      // Escuchar cambios en carrito
+      carritoRef.on('value', (snapshot) => {
+        carrito = snapshot.val() || [];
+        actualizarCarrito();
+      });
+
+      // Escuchar cambios en el logo
+      logoRef.on('value', (snapshot) => {
+        const logoUrl = snapshot.val();
+        if (logoUrl) {
+          document.getElementById("company-logo").src = logoUrl;
+        }
+      });
+
+      // Agregar producto a la base de datos
+      function agregarProducto(nuevoProducto) {
+        productos.push(nuevoProducto);
+        productosRef.set(productos);
+      }
+
+      // Agregar al carrito en la base de datos
+      function agregarAlCarrito(index) {
+        carrito.push(productos[index]);
+        carritoRef.set(carrito);
+      }
+
       // Eliminar producto de la base de datos
       function eliminarProducto(index) {
         productos.splice(index, 1);
         productosRef.set(productos);
-        actualizarVista(); // Asegúrate de actualizar la vista después de eliminar
       }
+
+      // Editar producto en la base de datos
+      function editarProducto(index, campo, valor) {
+        productos[index][campo] = valor;
+        productosRef.set(productos);
+      }
+
+      // Editar imagen del producto en la base de datos
+      function editarImagen(index, input) {
+        const file = input.files[0];
+        if (file) {
+          const reader = new FileReader();
+          reader.onloadend = () => {
+            productos[index].imagen = reader.result;
+            productosRef.set(productos);
+          };
+          reader.readAsDataURL(file);
+        }
+      }
+
+      // Cambiar logo en la base de datos
+      function cambiarLogo() {
+        const input = document.getElementById("logoInput").files[0];
+        if (input) {
+          const reader = new FileReader();
+          reader.onloadend = function () {
+            const logoUrl = reader.result;
+            document.getElementById("company-logo").src = logoUrl;
+            logoRef.set(logoUrl);
+          };
+          reader.readAsDataURL(input);
+        }
+      }
+
+      // Comprar y vaciar carrito en la base de datos
+      function comprar() {
+        if (carrito.length) {
+          alert("¡Gracias por tu compra!");
+          carrito = [];
+          carritoRef.set(carrito);
+        } else {
+          alert("Tu carrito está vacío.");
+        }
+      }
+
+      const modal = document.getElementById("adminModal");
+      const botonAdmin = document.getElementById("botonAdmin");
+      const span = document.getElementsByClassName("close")[0];
+      const productosContainer = document.getElementById("productos-container");
+      const productosAgregados = document.getElementById("productos-agregados");
+      const categoriasContainer = document.getElementById("categorias-container");
+
+      let productos = [];
+      let carrito = [];
+      let categoriaSeleccionada = "todas";
+
+      botonAdmin.onclick = () => modal.style.display = "block";
+      span.onclick = () => modal.style.display = "none";
+      window.onclick = e => { if (e.target === modal) modal.style.display = "none"; };
+
+      document.getElementById("formulario-producto").addEventListener("submit", function (event) {
+        event.preventDefault();
+        const nombre = document.getElementById("nombreProducto").value;
+        const precio = document.getElementById("precioProducto").value;
+        const categoria = document.getElementById("categoriaProducto").value;
+        const imagen = document.getElementById("imagenProducto").files[0];
+
+        if (imagen) {
+          const reader = new FileReader();
+          reader.onloadend = function () {
+            const nuevoProducto = {
+              nombre, precio, categoria, imagen: reader.result
+            };
+            agregarProducto(nuevoProducto);
+          };
+          reader.readAsDataURL(imagen);
+        }
+
+        this.reset();
+      });
 
       function actualizarVista() {
         productosContainer.innerHTML = '';
@@ -84,11 +372,69 @@
         });
       }
 
-      // Other functions omitted for brevity
+      function actualizarBotonesCategorias() {
+        const categorias = ["todas", ...new Set(productos.map(p => p.categoria))];
+        categoriasContainer.innerHTML = categorias.map(cat => 
+          `<button class="categoria-boton" onclick="filtrarCategoria('${cat}')">${cat}</button>`).join('');
+      }
+
+      function actualizarCarrito() {
+        const listaCarrito = document.getElementById("lista-carrito");
+        listaCarrito.innerHTML = '';
+        let total = 0;
+        carrito.forEach(p => {
+          listaCarrito.innerHTML += `<li>${p.nombre} - $${p.precio}</li>`;
+          total += parseFloat(p.precio);
+        });
+        document.getElementById("total").textContent = total.toFixed(2);
+      }
+
+      function filtrarCategoria(categoria) {
+        categoriaSeleccionada = categoria;
+        actualizarVista();
+      }
     });
   </script>
 </head>
 <body>
-  <!-- Body content omitted for brevity -->
+  <header>
+    <img id="company-logo" src="" alt="Logo de la empresa">
+    <h1>Sorpresas in Style</h1>
+    <div id="categorias-container"></div>
+  </header>
+
+  <main>
+    <section id="productos-container"></section>
+    <section id="carrito">
+      <h2>Carrito de Compras</h2>
+      <ul id="lista-carrito"></ul>
+      <p>Total: $<span id="total">0</span></p>
+      <button onclick="comprar()">Comprar</button>
+    </section>
+  </main>
+
+  <!-- Modal -->
+  <div id="adminModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2>Panel de Administración</h2>
+      <form id="formulario-producto">
+        <input type="text" id="nombreProducto" placeholder="Nombre del desayuno" required class="input-edit">
+        <input type="number" id="precioProducto" placeholder="Precio" required class="input-edit">
+        <input type="text" id="categoriaProducto" placeholder="Categoría" required class="input-edit">
+        <input type="file" id="imagenProducto" accept="image/*" required class="input-edit">
+        <button type="submit" class="admin-button">Agregar Desayuno</button>
+      </form>
+      <hr>
+      <h3>Desayunos Agregados</h3>
+      <div id="productos-agregados"></div>
+      <hr>
+      <h3>Cambiar Logo</h3>
+      <input type="file" id="logoInput" accept="image/*" class="input-edit"/>
+      <button onclick="cambiarLogo()" class="admin-button">Cambiar Logo</button>
+    </div>
+  </div>
+
+  <button id="botonAdmin">⚙️</button>
 </body>
 </html>
